Proceed on test failure

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Forced failure
+        continue-on-error: true
         run: exit 1
 
       - name: Rocket.Chat Notification
