--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,105 +3,59 @@ name: Check notification
 on: [push]
 
 jobs:
-  success:
-    name: Works properly
-    runs-on: ubuntu-18.04
+  notifications:
+    name: Rocket.Chat Notifications
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
 
-      - name: Rocket.Chat Notification
+      - name: with mention
         uses: ./
-        if: always()
         with:
           type: ${{ job.status }}
           job_name: ':robot_face: *Success*'
           mention: 'here'
-          mention_if: 'failure'
-          channel: '#develop'
           url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
 
-  success_no_mention:
-    name: Works properly without mention
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@master
-
-      - name: Rocket.Chat Notification
+      - name: with mention on success
         uses: ./
-        if: always()
+        with:
+          type: ${{ job.status }}
+          job_name: ':robot_face: *Success*'
+          mention: 'here'
+          mention_if: 'success'
+          url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+
+      - name: with mention on always
+        uses: ./
+        with:
+          type: ${{ job.status }}
+          job_name: ':robot_face: *Success*'
+          mention: 'here'
+          mention_if: 'success'
+          url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+
+      - name: with mention on failure only
+        uses: ./
         with:
           type: ${{ job.status }}
           job_name: ':robot_face: *Success no mention*'
-          channel: '#develop'
-          url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
-
-  failure:
-    name: Works failed
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@master
-
-      - name: Forced failure
-        continue-on-error: true
-        run: exit 1
-
-      - name: Rocket.Chat Notification
-        uses: ./
-        if: failure()
-        with:
-          type: ${{ job.status }}
-          job_name: ':robot_face: *Failure*'
           mention: 'here'
           mention_if: 'failure'
-          channel: '#develop'
           url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
 
-      - name: Check if work properly
-        if: failure()
-        run: |
-          echo 'Rocket.Chat failure notification succeeded'
-          exit 0
-
-  cancel:
-    # You have to cancel this job
-    name: Works canceled
-    runs-on: ubuntu-18.04
-    needs: success
-    timeout-minutes: 1
-    steps:
-      - uses: actions/checkout@master
-
-      - name: Wait
-        run: sleep 70
-
-      - name: Rocket.Chat Notification
+      - name: with no mention
         uses: ./
-        if: cancelled()
         with:
           type: ${{ job.status }}
-          job_name: ':robot_face: *Cancel*'
-          mention: 'here'
-          mention_if: 'always'
-          channel: '#develop'
+          job_name: ':robot_face: *Success no mention*'
           url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
 
-      - name: Check if work properly
-        if: cancelled()
-        run: |
-          echo 'Rocket.Chat cancelled notification succeeded'
-          exit 0
-
-  commit:
-    name: Include commit data
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@master
-
-      - uses: ./
+      - name: with commit info
+        uses: ./
         with:
           type: ${{ job.status }}
           job_name: ':robot_face: *Commit*'
-          channel: '#develop'
-          url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
           commit: 'true'
+          url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
           token: ${{ secrets.GITHUB_TOKEN }}
