feat(notification): Optional notification body

--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,10 @@ inputs:
   url:
     description: 'rocket.chat incoming webhook url'
     required: false
+  body:
+    description: 'whether include data (ref, event name, workflow, repository) or not (true or false)'
+    required: false
+    default: 'true'
   commit:
     description: 'whether include commit data or not (true or false)'
     required: false
