GitHub Enterprise Support
debug

debug

Update rocketchat.ts

Update index.js

try catch

:(

api url

Assign correct variable...

So close!

Fix Author Name

Cleanup

--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,9 @@ inputs:
   token:
     description: 'need to get commit data'
     required: false
+  github_url:
+    description: 'needed for GitHub Enterprise'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
