--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocketchat-github-action-notification",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Rocket.Chat Notification for GitHub Actions",
   "main": "lib/main.js",
   "scripts": {
@@ -31,22 +31,22 @@
   },
   "homepage": "https://github.com/RocketChat/Rocket.Chat.GitHub.Action.Notification#readme",
   "dependencies": {
-    "@actions/core": "^1.2.0",
-    "@actions/exec": "^1.0.1",
-    "@actions/github": "^1.1.0",
-    "@actions/io": "^1.0.1",
-    "@actions/tool-cache": "^1.1.2",
-    "axios": "^0.19.0"
+    "@actions/core": "^1.4.0",
+    "@actions/exec": "^1.1.0",
+    "@actions/github": "^5.0.0",
+    "@actions/io": "^1.1.1",
+    "@actions/tool-cache": "^1.7.1",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.12",
-    "@zeit/ncc": "^0.20.5",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^24.9.0",
-    "prettier": "^1.19.1",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.2"
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.3",
+    "@vercel/ncc": "^0.29.0",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "jest-circus": "^27.0.6",
+    "prettier": "^2.3.2",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
   }
 }
